# calculator

./: CMakeLists.txt  README.md  calc.cpp  calc.h  main.cpp  test.cpp
